fix: correct alignment property in BodyEditor and CodeGenerator styles

--- a/src/components/CodeGenerator/CodeGenerator.module.scss
+++ b/src/components/CodeGenerator/CodeGenerator.module.scss
@@ -9,7 +9,7 @@
 .header {
   display: flex;
   justify-content: space-between;
-  align-items: end;
+  align-items: flex-end;
 }
 
 .header h3 {
